--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,27 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  
+  # Navigation
+  go_router: ^12.1.1
+  
+  # State management
+  provider: ^6.1.1
+  
+  # UI components
+  cached_network_image: ^3.3.0
+  flutter_svg: ^2.0.9
+  shimmer: ^3.0.0
+  google_fonts: ^6.1.0
+  lottie: ^3.0.0
+  fl_chart: ^0.65.0
+  
+  # Animation
+  flutter_animate: ^4.3.0
+  
+  # Utilities
+  intl: ^0.19.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -58,10 +79,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/images/
+    - assets/icons/
+    - assets/animations/
+  
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
